--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <script src='app.js'></script>
 <script>
 const canvas = document.createElement('canvas')
+function keyCodeToName(keyCode) {
+  switch (keyCode) {
+    case 37:
+    case 65:
+      return 'LEFT'
+    case 38:
+    case 87:
+      return 'UP'
+    case 39:
+    case 68:
+      return 'RIGHT'
+    case 40:
+    case 83:
+      return 'DOWN'
+      break
+    case 32:
+      return 'SPACE'
+  }
+}
 onload = () => {
   document.body.appendChild(canvas)
   canvas.width = canvas.height = 1024
@@ -8,24 +27,31 @@ onload = () => {
   canvas.style.width = 512
   canvas.style.boxShadow='0 0 1px black'
   const b = new Buncho()
-  let key = false
-  let keyPress = false
-  document.onkeydown = function(){
-    key = true
-    keyPress = true
+  const KeyMap = {}
+  const KeyPressedMap = {}
+
+  document.onkeydown = function(e){
+    const name = keyCodeToName(e.keyCode)
+    if (name) {
+      if (!KeyMap[name]) KeyPressedMap[name] = true
+      KeyMap[name] = true
+    }
   }
-  document.onkeyup = function(){
-    key = false
+  document.onkeyup = function(e){
+    const name = keyCodeToName(e.keyCode)
+    if (name) {
+      KeyMap[name] = false
+    }
   }
   setInterval(()=>{
     ctx.save()
     ctx.clearRect(0, 0, 1024, 1024)
     ctx.translate(512, 800)
     ctx.scale(128, -128)
-    b.update(key, keyPress)
-    keyPress = false
+    b.update(KeyMap, KeyPressedMap)
+    for (const key in KeyPressedMap) KeyPressedMap[key] = false
     b.render(ctx)
     ctx.restore()
-  })
+  }, 20)
 }
 </script>
